frontend-friends/src/routes/caselist/CaseList.scss
@use "../../style/margins.scss";

.list-container {
    flex-grow: 1;
    background-color: white;
    margin-left: margins.$margin-md;
    margin-right: margins.$margin-md;
    margin-bottom: margins.$margin-md;
    border-radius: 6px;
    box-shadow: 5px 5px 15px #dee0e2;
    overflow: scroll;

    .container-title {
        padding: margins.$margin-md;
        h1 {
            margin: 0;
        }
        width: 50%;
    }

    .top-wrapper{
        display:flex;
    }

    .search-container{
        right: 0;
        width: 40%;
        //margin-top: 1.5%;
        padding: 2%;
    }
}

